# easyalign

./: .gitignore  .nojekyll  LICENSE  README.md  about.html  index.html  pyproject.toml  requirements.txt  search.json  test_align.py  test_align_lib.py
_assets/: hero-dark.html  hero-light.html  tale_two_cities_ch01.txt
docs/: _publish.yml  _quarto.yml  index.qmd  objects.json  styles.css
get-started/: overview.html  transcript.js  tutorial01.html  tutorial02.html  tutorial03.html
reference/: AlignmentSegment.html  AudioChunk.html  AudioMetadata.html  FuzzyMatch.html  SpeechSegment.html  WordSegment.html  alignment_pipeline.html  alignment_pipeline_generator.html  data.dataset.AudioFileDataset.html  data.dataset.JSONMetadataDataset.html  data.dataset.MsgpackMetadataDataset.html  data.dataset.StreamingAudioFileDataset.html  data.utils.read_json.html  easyaligner.data.dataset.AudioFileDataset.get_speech_features.html  easyaligner.data.dataset.AudioFileDataset.get_vad_features.html  easyaligner.text.normalization.SpanMapNormalizer.get_token_map.html  easyaligner.text.normalization.SpanMapNormalizer.transform.html  emissions_pipeline.html  emissions_pipeline_generator.html  index.html  normalization.SpanMapNormalizer.html  normalization.text_normalizer.html  pipeline.html  pipelines.alignment_pipeline.html  pipelines.alignment_pipeline_generator.html  pipelines.emissions_pipeline.html  pipelines.emissions_pipeline_generator.html  pipelines.pipeline.html  pipelines.vad_pipeline.html  pipelines.vad_pipeline_generator.html  tokenizer.load_tokenizer.html  vad_pipeline.html  vad_pipeline_generator.html
scripts/: debug_align.py  separate_pipelines.py  test_align.py  test_vad.py  (+4 more)
(+87 files in other folders)
